--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "homepage": "https://github.com/787898Den/.github.io/cat-energy",
   "scripts": {
-    "start": "parcel src/*.html",
+    "start": "parcel src/*.html --open",
     "build": "parcel build src/*.html --public-url /parcel-project-template/"
   },
   "repository": {
