--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "homepage": "https://github.com/787898Den/.github.io/cat-energy",
   "scripts": {
     "start": "parcel src/*.html --open",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /https://github.com/787898Den/.github./cat-energy/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "git+https://github.com/787898Den/.github./cat-energy"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
