--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://github.com/787898Den/.github.io/cat-energy",
+  "homepage": "https://787898den.github.io/cat-energy",
   "scripts": {
     "start": "parcel src/*.html --open",
     "build": "parcel build src/*.html --public-url /parcel-project-template/"
